--- a/index.html
+++ b/index.html
@@ -1,23 +1,446 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>Home</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
-    <!--
-      Need a visual blank slate?
-      Remove all code in `styles.css`!
-    -->
-    <link rel="stylesheet" href="styles.css" />
-    <script type="module" src="script.js"></script>
-  </head>
-  <body>
-    <nav>
-      <a href="/" aria-current="page">Home</a>
-      <a href="/page2.html">Other page</a>
-    </nav>
-    <main>
-      <h1>Home page</h1>
-    </main>
-  </body>
-</html>
+ <style>
+    /* 기존 CSS 스타일 유지 및 추가 최적화 */
+    body {
+      font-family: 'Noto Sans KR', sans-serif;
+      margin: 0;
+      padding: 0;
+      line-height: 1.6;
+      color: #333;
+      background: #f9f9f9;
+    }
+    header, nav, section, footer {
+      padding: 20px;
+      max-width: 1200px;
+      margin: auto;
+      background: #fff;
+      margin-bottom: 15px;
+      border-radius: 6px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+    header h1 {
+      margin-bottom: 5px;
+      color: #ff5722; /* 포인트 색상 */
+      font-size: 2.2rem;
+      line-height: 1.4;
+    }
+    nav {
+      background: #ff5722; /* 포인트 색상 */
+      border-radius: 6px;
+      text-align: center;
+      padding: 15px 0;
+      margin-bottom: 30px;
+    }
+    nav a {
+      color: #fff;
+      margin: 0 15px;
+      font-weight: 600;
+      text-decoration: none;
+      font-size: 1.1rem;
+      transition: opacity 0.3s;
+      white-space: nowrap; /* 모바일에서 줄바꿈 방지 */
+    }
+    nav a:hover {
+      opacity: 0.75;
+      text-decoration: underline;
+    }
+    h2 {
+      border-bottom: 3px solid #ff5722; /* 포인트 색상 */
+      padding-bottom: 5px;
+      margin-bottom: 20px;
+      color: #333;
+      font-size: 1.8rem;
+    }
+    h3 {
+      color: #ff5722; /* 포인트 색상 */
+      margin-top: 25px;
+      margin-bottom: 10px;
+      font-size: 1.4rem;
+    }
+    .content_card { /* 기존 .서비스_카드, .사례_카드 통합 및 일반화 */
+      border: 1px solid #eee;
+      padding: 20px;
+      border-radius: 6px;
+      margin-bottom: 20px;
+      background: #fff;
+      transition: box-shadow 0.3s;
+    }
+    .content_card:hover {
+      box-shadow: 0 4px 12px rgba(255, 87, 34, 0.3); /* 포인트 색상에 맞춘 호버 효과 */
+    }
+    .cta {
+      display: inline-block;
+      background-color: #ff5722; /* 포인트 색상 */
+      color: white;
+      padding: 15px 35px;
+      border-radius: 6px;
+      font-weight: 700;
+      font-size: 1.1rem;
+      text-decoration: none;
+      transition: background-color 0.3s ease;
+      margin-top: 15px;
+    }
+    .cta:hover {
+      background-color: #e64a19; /* 포인트 색상_dark */
+    }
+    form label {
+      display: block;
+      margin-bottom: 10px;
+      font-weight: 600;
+      color: #555;
+    }
+    form input[type="text"], form input[type="email"], form input[type="tel"], form select, form input[type="date"] {
+      width: calc(100% - 22px); /* 패딩 고려 */
+      padding: 10px;
+      margin-top: 4px;
+      border-radius: 4px;
+      border: 1px solid #ccc;
+      font-size: 1rem;
+    }
+    form button {
+      margin-top: 20px;
+      width: 100%;
+      cursor: pointer;
+      font-size: 1.1rem;
+      padding: 15px;
+      border: none;
+      border-radius: 6px;
+      background-color: #ff5722; /* 포인트 색상 */
+      color: white;
+      font-weight: 700;
+      transition: background-color 0.3s;
+    }
+    form button:hover {
+      background-color: #e64a19;
+    }
+    dl.faq dt {
+      font-weight: 700;
+      margin-top: 20px;
+      cursor: pointer;
+      color: #ff5722; /* 포인트 색상 */
+      font-size: 1.1rem;
+    }
+    dl.faq dd {
+      margin-left: 15px;
+      margin-top: 8px;
+      color: #555;
+      padding-bottom: 10px;
+      border-bottom: 1px dashed #eee;
+    }
+    table {
+        width: 100%;
+        border-collapse: collapse;
+        margin-top: 20px;
+    }
+    th, td {
+        border: 1px solid #ddd;
+        padding: 12px;
+        text-align: left;
+        font-size: 0.95rem;
+    }
+    th {
+        background-color: #f2f2f2;
+        color: #333;
+        font-weight: 600;
+    }
+    ul, ol {
+        margin-left: 20px;
+        padding-left: 0;
+    }
+    li {
+        margin-bottom: 8px;
+    }
+    .warning {
+        padding: 15px;
+        background-color: #fff3e0; /* 연한 오렌지 배경 */
+        border-left: 5px solid #ff9800; /* 오렌지 바 */
+        margin-top: 20px;
+        border-radius: 4px;
+        font-size: 0.95rem;
+    }
+    /* 텍스트 양이 많아질 것을 대비한 스타일 추가 */
+    p { margin-bottom: 15px; }
+    .content-container { padding: 20px; }
+    a.external-link { color: #007bff; text-decoration: underline; }
+    a.external-link:hover { text-decoration: none; }
+  </style>
+
+  <!-- JSON-LD Schema for FinancialService & OfferCatalog -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"FinancialService",
+    "name":"60대실비보험 비교센터",
+    "description": "2026년 60대 실비보험 가입 조건, 비교 견적 및 핵심 가이드",
+    "url":"https://www.yourdomain.kr/",
+    "logo": "https://www.yourdomain.kr/images/logo.png",
+    "areaServed": "대한민국 전역",
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "telephone": "+82-10-1234-5678",
+      "contactType": "customer service"
+    },
+    "hasOfferCatalog": {
+      "@type": "OfferCatalog",
+      "name": "60대 실비보험 상품",
+      "itemListElement": [
+        {"@type": "Offer", "itemOffered": {"@type": "Service", "name": "유병자 실비보험"}},
+        {"@type": "Offer", "itemOffered": {"@type": "Service", "name": "간편심사 보험"}},
+        {"@type": "Offer", "itemOffered": {"@type": "Service", "name": "비갱신형 실버보험"}}
+      ]
+    }
+  }
+  </script>
+</head>
+<body>
+
+<header id="상단">
+  <h1>60대실비보험: 비갱신형 가입 조건 및 간편심사 보험료 비교 (2026년 가이드)</h1>
+  <p>60세 이상 부모님을 위한 실비보험, 보험료 비교부터 가입 심사까지 <strong>전문가와 함께</strong>하세요.</p>
+  <a href="#무료견적신청" class="cta">무료 견적 및 맞춤 상담 신청하기</a>
+</header>
+
+<nav>
+  <a href="#핵심요약">핵심 요약</a>
+  <a href="#가입조건">가입 조건 및 종류</a>
+  <a href="#보험료비교">보험료 비교</a>
+  <a href="#가입절차">가입 절차</a>
+  <a href="#고객후기">고객 후기</a>
+  <a href="#자주묻는질문">FAQ</a>
+</nav>
+
+<section id="핵심요약" aria-label="60대 실비보험 핵심 요약">
+  <h2>60대실비보험: 왜 지금 가입해야 할까요?</h2>
+  <div class="content_card content-container">
+    <p>60대 연령층은 노화로 인해 신체 기능이 저하되면서 질병 발생률이 급격히 증가하는 시기입니다. 실제로 통계청 자료에 따르면 60대 이상 인구의 의료비 지출은 다른 연령대에 비해 월등히 높습니다. 국민건강보험공단 자료에서도 1인당 연평균 진료비는 60대 이상에서 폭발적으로 증가하는 추세를 보입니다.</p>
+    <p>이러한 배경 때문에 60대에 실비보험을 준비하는 것은 매우 중요합니다. 실비보험은 국민건강보험에서 보장하지 않는 비급여 항목(MRI, 도수치료, 주사료 등)의 의료비를 보장해주므로, 예상치 못한 병원비 지출로 인한 경제적 부담을 크게 줄일 수 있습니다.</p>
+    <p>하지만 60대에는 기존 질병 이력이나 고혈압, 당뇨와 같은 만성질환이 있는 경우가 많아 일반 실비보험 가입이 어렵거나 까다로운 경우가 많습니다. 2026년 현재 보험 시장에서는 이러한 상황을 고려하여 '유병자 실비보험'이나 '간편심사 보험' 등 다양한 상품이 출시되어 있습니다. 본 가이드는 60대 연령층이 가입할 수 있는 실비보험의 종류와 가입 시 유의사항을 자세히 안내해 드립니다.</p>
+    <h3><a href="#가입조건">키워드 분석: 60대실비보험 관련 검색어</a></h3>
+    <p>네이버 검색창에 "60대실비보험"을 검색할 때 함께 많이 찾는 연관 검색어는 다음과 같습니다. 이러한 검색어들은 60대 보험 가입자들이 주로 궁금해하는 내용을 반영하며, 보험 상품을 선택하는 데 중요한 기준이 됩니다:</p>
+    <ul>
+      <li><strong>60대 실비보험 비갱신형:</strong> 보험료 인상 없이 만기까지 동일한 금액으로 유지하고 싶어하는 니즈를 반영합니다.</li>
+      <li><strong>60대 유병자 실비보험:</strong> 이미 질병이 있는 경우 가입 가능 여부를 확인합니다.</li>
+      <li><strong>60대 보험료 비교:</strong> 나이와 건강 상태에 따라 보험료가 달라지므로, 여러 상품을 비교하는 것이 필수적입니다.</li>
+      <li><strong>부모님 실비보험 가입:</strong> 자녀들이 부모님을 위해 가입을 알아보는 경우가 많습니다.</li>
+      <li><strong>60세 이상 실비보험:</strong> 60세 전후의 가입 조건 차이를 확인합니다.</li>
+      <li><strong>간편심사 보험:</strong> 복잡한 심사 과정 없이 빠르게 가입하려는 수요가 높습니다.</li>
+    </ul>
+  </div>
+</section>
+
+<section id="가입조건" aria-label="60대 실비보험 가입 조건 및 종류">
+  <h2>60대실비보험 가입 조건: 일반형 vs. 간편심사형 비교 (2026년 기준)</h2>
+  <div class="content_card content-container">
+    <p>60세 이상 연령층의 실비보험 가입은 크게 두 가지 유형으로 나뉩니다. 자신의 건강 상태에 따라 적합한 유형을 선택하는 것이 중요합니다.</p>
+
+    <h3>1. 일반 실비보험 (표준형): 건강한 60대를 위한 최적의 선택</h3>
+    <p><strong>가입 조건:</strong> 최근 5년 이내 중대 질병 이력(암, 심근경색, 뇌졸중 등)이나 1년 이내 입원/수술 이력이 없는 건강한 60대라면 일반 실비보험 가입을 시도해 볼 수 있습니다. 일반형은 간편심사형에 비해 보장 범위가 넓고 보험료가 상대적으로 저렴합니다.</p>
+    <ul>
+      <li><strong>주요 보장:</strong> 입원 및 통원 치료비, 약제비 등 표준 실비 보장.</li>
+      <li><strong>장점:</strong> 가장 넓은 보장 범위와 저렴한 보험료.</li>
+      <li><strong>단점:</strong> 가입 심사 기준이 까다로워 병력이 있는 경우 가입 거절 확률이 높습니다.</li>
+    </ul>
+
+    <h3>2. 간편심사 실비보험 (유병자 실비보험): 만성질환자도 가입 가능</h3>
+    <p><strong>가입 조건:</strong> 60대 연령층에서 가장 많이 선택하는 유형입니다. 기존 질병이나 만성질환(고혈압, 당뇨)이 있어도 일정 기준만 충족하면 가입이 가능합니다.</p>
+    <p class="warning"><strong>간편심사 질문 (대표적인 3가지 기준, 2026년 변경사항 반영):</strong></p>
+    <ol>
+      <li>최근 3개월 이내 의사로부터 입원, 수술, 추가 검사(재검사) 소견을 받았는지?</li>
+      <li>최근 2년 이내 입원 또는 수술(제왕절개 포함)을 받은 사실이 있는지?</li>
+      <li>최근 5년 이내 암 진단, 암 치료(입원/수술 포함)를 받은 사실이 있는지?</li>
+    </ol>
+    <p>위 3가지 질문에 모두 "아니오"라고 답할 수 있다면 간편심사형 보험 가입이 가능합니다. 단, 일반형에 비해 보험료가 비싸고 보장 범위가 축소될 수 있습니다.</p>
+
+    <h3>3. 비갱신형 vs. 갱신형: 60대에게 더 유리한 선택은?</h3>
+    <p><strong>갱신형 (Renewable):</strong> 일정 주기(1년, 3년, 5년 등)마다 보험료가 재산정됩니다. 나이가 들수록, 그리고 의료비 지출이 늘어날수록 보험료가 급격히 인상될 수 있습니다. 60대에는 보험료 인상 폭이 커서 부담이 될 수 있습니다.</p>
+    <p><strong>비갱신형 (Non-Renewable):</strong> 가입 시점의 보험료가 만기까지 일정하게 유지됩니다. 60대에는 비갱신형이 희소하지만, 보장 기간을 80~100세까지 길게 설정할 수 있어 장기적인 관점에서 유리합니다. 60대에 가입하는 비갱신형은 초기 보험료가 높지만, 노후 대비를 위해 많은 분들이 선호합니다.</p>
+    <div class="warning">
+        <p><strong>전문가 팁:</strong> 60대에는 이미 질병 발생 위험이 높아진 상태이므로, 비갱신형 상품이 희소합니다. 갱신형을 선택하더라도 보험료 인상률이 낮은 상품을 선택하거나, 보장 기간을 80세 만기로 설정하여 갱신 부담을 줄이는 전략이 필요합니다.</p>
+    </div>
+  </div>
+</section>
+
+<section id="보험료비교" aria-label="60대 실비보험 보험료 비교 및 보장 내용">
+  <h2>60대실비보험 보험료 비교: 핵심 보장 내용 분석</h2>
+  <div class="content_card content-container">
+    <p>60대 실비보험의 보험료는 나이, 성별, 건강 상태, 선택한 특약에 따라 천차만별입니다. 특히 2026년 보험 시장에서는 간편심사형 상품의 경쟁이 치열해지면서 다양한 보험사 상품을 비교해 보는 것이 중요합니다. 아래 표는 60대 남성(65세 기준)의 간편심사형 실비보험 주요 보장내용을 비교한 예시입니다.</p>
+
+    <h3>표 1: 60대 간편심사 실비보험 주요 비교 항목 (가상 예시)</h3>
+    <table>
+      <thead>
+        <tr>
+          <th>구분</th>
+          <th>A사 (2026년 최신 상품)</th>
+          <th>B사 (간편 심사형)</th>
+          <th>C사 (유병자 전용)</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>가입 연령 (60대)</td>
+          <td>61~70세</td>
+          <td>61~75세</td>
+          <td>60~80세</td>
+        </tr>
+        <tr>
+          <td>주요 심사 조건</td>
+          <td>3/2/5 간편 심사</td>
+          <td>3/2/5 간편 심사</td>
+          <td>3/2/5 간편 심사</td>
+        </tr>
+        <tr>
+          <td>입원 보장 한도</td>
+          <td>최대 5천만원</td>
+          <td>최대 5천만원</td>
+          <td>최대 5천만원</td>
+        </tr>
+        <tr>
+          <td>통원 보장 한도 (1일)</td>
+          <td>20만원</td>
+          <td>25만원</td>
+          <td>15만원</td>
+        </tr>
+        <tr>
+          <td>약제비 보장 한도 (1일)</td>
+          <td>5만원</td>
+          <td>5만원</td>
+          <td>3만원</td>
+        </tr>
+        <tr>
+          <td>갱신 주기</td>
+          <td>1년 갱신</td>
+          <td>3년 갱신</td>
+          <td>1년 갱신</td>
+        </tr>
+        <tr>
+          <td>가입시 예상 보험료 (남, 65세)</td>
+          <td>5만원대</td>
+          <td>6만원대</td>
+          <td>5.5만원대</td>
+        </tr>
+      </tbody>
+    </table>
+    <p><strong>주요 보장 내용 세부 분석:</strong></p>
+    <ul>
+      <li><strong>입원비:</strong> 병원에 입원하여 발생하는 병실료, 수술비, 검사비 등을 보장합니다. 60대에는 입원 일수가 길어질 가능성이 높으므로 입원비 보장 한도를 최대로 설정하는 것이 좋습니다.</li>
+      <li><strong>통원비:</strong> 외래 진료비와 처방조제비를 포함합니다. 60대에는 만성질환 관리로 인해 통원 횟수가 늘어나므로 1일 한도를 꼼꼼히 확인해야 합니다.</li>
+      <li><strong>특약 옵션:</strong> 60대 실비보험에서는 3대 비급여 특약(도수치료, 체외충격파, 증식치료 / MRI / 비급여 주사료)을 별도로 선택해야 합니다. 이 특약들은 60대 이상에게 필수적인 치료 항목이므로 가입을 추천드립니다.</li>
+    </ul>
+    <h3>60대 실비보험 가입 시 고려해야 할 위험 요인</h3>
+    <p><strong>1. 면책 기간 및 감액 기간:</strong> 보험 가입 후 일정 기간(보통 1년) 동안은 보장이 제한되거나(면책 기간) 보장 금액이 50%만 지급되는(감액 기간) 경우가 많습니다. 특히 암과 같은 중대한 질병은 면책 기간이 길기 때문에 가입 후 바로 보장받지 못할 수 있습니다. <a href="https://www.fss.or.kr/" target="_blank" class="external-link">금융감독원</a>의 보험 상품 비교 공시를 통해 이 부분을 반드시 확인해야 합니다.</p>
+    <p><strong>2. 중복 보장의 제한:</strong> 실비보험은 여러 개 가입해도 실제 지출한 의료비를 초과하여 받을 수 없습니다. 이미 다른 실비보험을 가지고 있다면 중복 가입보다는 기존 상품의 보장 내용을 확인하는 것이 중요합니다.</p>
+  </div>
+</section>
+
+<section id="가입절차" aria-label="60대 실비보험 가입 절차">
+  <h2>60대실비보험 가입 절차 및 유의사항</h2>
+  <div class="content_card content-container">
+    <ol>
+      <li><strong>1단계: 무료 견적 신청 및 상담 (가장 중요)</strong>
+        <p>가장 먼저 본인의 건강 상태(현재 복용 중인 약, 최근 5년간의 병력)를 정확하게 파악한 후, <a href="#무료견적신청">무료 견적 폼</a>을 통해 전문가 상담을 신청합니다. 60대 실비보험은 일반 보험과 달리 가입자의 병력에 따라 상품 선택이 달라지므로 전문가의 조언이 필수적입니다.</p></li>
+      <li><strong>2단계: 맞춤형 상품 추천 및 보험료 비교</strong>
+        <p>상담사는 가입자의 건강 상태를 토대로 여러 보험사의 상품을 비교하여 최적의 상품을 추천해 드립니다. 갱신형/비갱신형, 간편심사 여부, 특약 추가 여부에 따라 보험료와 보장 내용이 크게 달라지므로 충분한 비교가 필요합니다.</p></li>
+      <li><strong>3단계: 심사 진행 및 가입 심사</strong>
+        <p>가입자가 상품을 결정하면 보험사에 가입 심사를 요청합니다. 간편심사형의 경우 3/2/5 질문에 대한 답변만으로 심사가 완료되는 경우가 많습니다. 하지만 유병자 보험의 경우, 보험사에서 추가적인 서류(진료기록부, 건강검진 결과)를 요청할 수 있습니다.</p></li>
+      <li><strong>4단계: 계약 체결 및 증권 수령</strong>
+        <p>심사가 완료되고 승인이 나면 보험료를 납입하고 계약이 체결됩니다. 계약서와 보험 증권을 수령한 후, 계약 내용과 보장 내용을 다시 한번 꼼꼼히 확인합니다.</p></li>
+    </ol>
+    <h3>보험 가입 시 자주 하는 실수</h3>
+    <ul>
+      <li><strong>병력 고지 의무 위반:</strong> 가입 심사 시 과거 병력을 숨기거나 잘못 고지할 경우, 추후 보험금 지급이 거절될 수 있습니다. 60대 연령층은 과거 병력이 많더라도 정확하게 고지하는 것이 중요합니다.</li>
+      <li><strong>특약 불충분:</strong> 60대에게 중요한 치매 보장, 암 진단금 특약 등을 실비보험과 함께 구성하지 않아 나중에 후회하는 경우가 많습니다. 실비보험 외의 부족한 보장은 통합 보험 상품으로 보완하는 것을 추천합니다.</li>
+    </ul>
+    <h3><a href="https://www.law.go.kr/LSW/main.html" target="_blank" class="external-link">보험업법</a>과 소비자 보호 규정 (2026년 업데이트)</h3>
+    <p>2026년 보험업법 개정안에 따라 보험 소비자 보호가 강화되었습니다. 특히 고령층 계약자를 위한 설명 의무가 확대되어, 보험사는 60대 이상 가입자에게 상품의 주요 내용을 더욱 명확하게 설명해야 합니다. 가입자는 청약서와 약관을 꼼꼼히 확인하고, 이해가 되지 않는 부분은 반드시 상담사에게 문의해야 합니다. <a href="https://ko.wikipedia.org/wiki/%EC%8B%A4%EB%B9%84%EB%B3%B4%ED%97%98" target="_blank" class="external-link">실비보험에 대한 정의</a>를 참고하여 기본적인 이해를 높이는 것도 좋습니다.</p>
+  </div>
+</section>
+
+<section id="고객후기" aria-label="고객 후기 및 사례">
+  <h2>60대실비보험 고객 후기 및 실제 가입 사례</h2>
+  <div class="content_card content-container">
+    <div class="content_card">
+      <h3>65세 남성 간편심사형 가입 사례</h3>
+      <p>“65세 남성입니다. 3년 전 고혈압 진단을 받아 약을 꾸준히 복용 중이었습니다. 3년 전까지만 해도 일반 실비보험 가입은 거절되었는데, 간편심사형 상품이 있다는 것을 알고 상담을 신청했습니다. 3/2/5 심사 질문에 모두 해당되지 않아 무사히 가입할 수 있었습니다. 일반형보다 보험료는 약간 비싸지만, 이제라도 보장을 받을 수 있게 되어 마음이 놓입니다.”</p>
+    </div>
+    <div class="content_card">
+      <h3>61세 여성 비갱신형 가입 후기</h3>
+      <p>“61세 여성입니다. 평소 건강 관리를 잘 해와서 일반 실비보험 가입 심사를 받았습니다. 다행히 심사 통과되어 100세 만기 비갱신형 실비보험에 가입했습니다. 초기 보험료는 높지만, 갱신될 때마다 오르는 부담이 없어 장기적으로는 이득이라고 생각합니다. 자녀들에게 부담을 덜어줄 수 있어 기쁩니다.”</p>
+    </div>
+    <div class="content_card">
+      <h3>70세 어머님 유병자 실비보험 가입 후기</h3>
+      <p>“70세 어머님을 위해 알아보았습니다. 5년 이내 암 진단 이력이 있어 가입이 어려울 줄 알았습니다. 하지만 특정 보험사에서 암 병력에 대한 면책 기간(5년)이 지난 상품을 추천해 주어 무사히 가입했습니다. 60대 실비보험은 가입 시점을 놓치면 보장 자체가 어려워지므로, 하루라도 빨리 전문가와 상담하는 것이 중요합니다.”</p>
+    </div>
+  </div>
+</section>
+
+<section id="무료견적신청" aria-label="무료 견적 신청 및 맞춤 상담">
+  <h2>60대실비보험 무료 견적 신청하기</h2>
+  <div class="content_card content-container">
+    <form action="/submit-estimate" method="POST" aria-describedby="견적폼설명">
+      <p id="견적폼설명">아래 폼을 작성해주시면 60대 전문 상담사가 고객님의 건강 상태에 맞는 최적의 보험 상품을 비교 추천해 드립니다. 개인정보는 상담 목적으로만 사용되며 안전하게 처리됩니다.</p>
+
+      <label for="name">이름</label>
+      <input type="text" id="name" name="name" placeholder="실명을 입력해 주세요" required />
+
+      <label for="birthdate">생년월일 (만 나이 계산용)</label>
+      <input type="date" id="birthdate" name="birthdate" required />
+
+      <label for="phone">연락처</label>
+      <input type="tel" id="phone" name="phone" placeholder="010-1234-5678" pattern="[0-9]{3}-[0-9]{4}-[0-9]{4}" required />
+
+      <label for="insurance_type">관심 있는 보험 유형</label>
+      <select id="insurance_type" name="type" required>
+        <option value="">선택하세요</option>
+        <option value="간편심사형_실비보험">간편심사형 실비보험 (유병자)</option>
+        <option value="일반형_실비보험">일반 실비보험 (건강한 분)</option>
+        <option value="비갱신형_실버보험">비갱신형 실버보험 (통합형)</option>
+        <option value="기타">기타 (상담 필요)</option>
+      </select>
+
+      <label for="current_health">현재 건강 상태 (최근 5년 이내 입원/수술 여부, 만성질환 진단 여부)</label>
+      <input type="text" id="current_health" name="health" placeholder="예: 고혈압약 복용 중, 3년 전 허리 수술" required />
+
+      <label for="desired_coverage">희망 보장 내용</label>
+      <input type="text" id="desired_coverage" name="coverage" placeholder="예: 입원비, 통원비, 비급여 주사료 보장 희망" />
+
+      <button type="submit" class="cta">무료 견적 요청하기</button>
+    </form>
+  </div>
+</section>
+
+<section id="자주묻는질문" aria-label="자주 묻는 질문 FAQ">
+  <h2>자주 묻는 질문 (FAQ)</h2>
+  <div class="content_card content-container">
+    <dl class="faq">
+      <dt>60대 실비보험 가입 시 보험료는 얼마나 되나요?</dt>
+      <dd>60대 실비보험료는 가입자의 건강 상태와 성별, 나이에 따라 크게 달라집니다. 간편심사형 기준으로 60대 초반 남성은 5~7만원대, 여성은 4~6만원대(특약 제외)가 일반적입니다. 정확한 보험료는 1:1 상담을 통해 확인하는 것이 좋습니다.</dd>
+
+      <dt>고혈압 약을 복용 중인데 실비보험 가입이 가능한가요?</dt>
+      <dd>네, 고혈압 약을 복용 중이더라도 대부분의 간편심사형 실비보험 상품에 가입이 가능합니다. 간편심사형은 고혈압, 당뇨와 같은 만성질환자도 가입할 수 있도록 심사 기준이 완화되어 있습니다. 다만, 가입 후 2년 이내 합병증으로 입원/수술을 받은 이력이 있다면 심사가 까다로울 수 있습니다.</dd>
+
+      <dt>실비보험 면책 기간이 무엇인가요?</dt>
+      <dd>면책 기간은 보험 가입 후 일정 기간 동안 보험금 지급을 하지 않는 기간을 말합니다. 60대 실비보험은 가입 즉시 보장이 시작되지만, 암 등 중대 질병은 90일~1년의 면책 기간이 적용되는 경우가 많습니다. <a href="http://www.kfb.or.kr/" target="_blank" class="external-link">생명보험협회</a> 등 공인된 기관의 정보를 통해 면책 기간을 정확히 확인하세요.</dd>
+
+      <dt>비갱신형 상품은 60대도 가입할 수 있나요?</dt>
+      <dd>네, 가입할 수 있습니다. 하지만 60대에 가입하는 비갱신형 실비보험은 30~40대에 가입하는 상품보다 초기 보험료가 상당히 높습니다. 또한, 건강 상태가 매우 양호해야 하므로 간편심사형이 아닌 일반형 심사를 통과해야 합니다. 전문가와 상담하여 비갱신형의 장단점을 신중하게 비교하는 것이 좋습니다.</dd>
+
+      <dt>실비보험 외에 60대에게 필요한 보장은 무엇인가요?</dt>
+      <dd>실비보험은 실제 지출한 의료비를 보장하는 것이므로, 중대 질병(암, 뇌혈관질환, 심장질환) 진단비, 치매 간병비, 상해 후유장해 보장 등을 추가로 준비하는 것이 좋습니다. 60대는 면역력이 약해져 다양한 질병에 노출될 위험이 높기 때문입니다.</dd>
+    </dl>
+  </div>
+</section>
+
+<section id="문의하기" aria-label="문의하기">
+  <h2>문의하기</h2>
+  <div class="content_card content-container">
+    <p><strong>대표 상담 전화: 010-1234-5678</strong> | <a href="mailto:info@yourdomain.kr">info@yourdomain.kr</a></p>
+    <p>운영시간: 월~금 09:00~18:00 (주말 및 공휴일 휴무)</p>
+    <p>주소: 서울특별시 강남구 테헤란로 123 (가상 주소)</p>
+  </div>
+</section>
+
+<footer>
+  <p style="text-align:center; color:#777; font-size:0.9rem;">&copy; 2026 60대실비보험 비교센터 | 사업자등록번호 123-45-67890 | 개인정보 보호정책 | <a href="#상단" style="color:#777;">TOP</a></p>
+</footer>
+
+
+  
